<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">XXX-XXX-XXXX</string>
    <string name="arrow">►</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvName">Name</string>
    <string name="tvPhone">Phone</string>
    <string name="tvEmail">Email</string>
    <string name="tvAddress">Address</string>
    <string name="btnUpdate">Update</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnCall">Call</string>
    <string name="btnEmail">Email</string>
</resources>