<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llContact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="#A3DCD6"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="16dp"
        android:text="@string/contact_name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvArrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:text="@string/arrow"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

</LinearLayout>